some fucntions working

--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,7 @@
 <script src="app/Project/project.newProject.controller.js"></script>
 <script src="app/Student/student.detail.controller.js"></script>
 <script src="app/Student/student.grid.controller.js"></script>
+<script src="app/Student/student.newStudent.controller.js"></script>
 <!-- endinject -->
 
 
